# advent-of-code-2024

./: .gitignore  Cargo.toml  README.md
.forgejo/workflows/: build_test.yml
00/: Cargo.toml
00/src/: main.rs
01/: Cargo.toml
01/src/: main.rs
02/: Cargo.toml
02/src/: main.rs
03/: Cargo.toml
03/src/: main.rs
04/: Cargo.toml
04/src/: main.rs
05/: Cargo.toml
05/src/: main.rs
06/: Cargo.toml
06/src/: main.rs
07/: Cargo.toml
07/src/: main.rs
08/: Cargo.toml
08/src/: main.rs
09/: Cargo.toml
09/src/: main.rs
shared/: Cargo.toml
shared/src/: errors.rs  input.rs  lib.rs
