[package]
name = "day03"
version = "0.1.0"
authors = [ "David Kowis <david@kow.is>" ]
edition = "2021"

[dependencies]
shared = { path = "../shared" }
thiserror = "2.0.3"
log = "0.4.22"
flexi_logger = "0.29.6"
indoc = "2.0.5"
regex = "1.11.1"
itertools = "0.13.0"
once_cell = "1.20.2"

[dev-dependencies]
pretty_assertions = "1.4.1"