[package]
name = "day09"
version = "0.1.0"
authors = [ "David Kowis <david@kow.is>" ]
edition = "2021"

[dependencies]
shared = { path = "../shared" }
thiserror = "2.0.3"
indoc = "2.0.5"
code-timing-macros = {  version = "0.0.5", features = ["release"] }

[dev-dependencies]
pretty_assertions = "1.4.1"